<resources>
    <string name="app_name">Study Group Manager</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_reset_password">Forgot password?</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="welcome">"Welcome to Study Group Manager\nPlease sign in or register"</string>
    <string name="email_verification_feedback">"Thank you for registering.\n
        Please confirm your Email by clicking on the link we just sent."</string>

    <!-- Strings related to navigation -->
    <string name="title_activity_main">My study groups</string>
    <string name="title_activity_bottom_navigation">Study Group Manager</string>
    <string name="title_home">My study groups</string>
    <string name="title_search">Search</string>
    <string name="title_profile">Profile</string>
    <string name="title_create">Create a new study group</string>

    <!-- Strings related to searching for a new study group -->
    <string name="search_filter">Filter study groups (all fields)</string>
    <string name="search_filter_apply">Apply</string>
    <string name="search_filter_clear">Clear</string>
    <string name="search_sort_group_date">Sort by event date</string>
    <string name="search_sort_group_creation_date">Sort by creation date</string>

    <!-- Strings related to creating a new study group -->
    <string name="title_activity_create">Create a new study group</string>
    <string name="create_group_hint_group_name">Enter the group name</string>
    <string name="create_group_hint_group_details">Add group details (optional)</string>
    <string name="create_group_hint_participants_max">Max. participants</string>
    <string name="create_group_btn_participants_inc">+</string>
    <string name="create_group_btn_participants_dec">-</string>
    <string name="create_group_hint_date_from">Date from</string>
    <string name="create_group_hint_date_to">Date to</string>
    <string name="create_group_hint_time_from">Time from</string>
    <string name="create_group_hint_time_to">Time to</string>
    <string name="create_group_hint_location">Provide the location</string>
    <string name="create_group_hint_location_details">Provide location details (optional)</string>
    <string name="create_group_txt_knowledge">My knowledge</string>
    <string name="create_group_txt_knowledge_little">little</string>
    <string name="create_group_txt_knowledge_good">good</string>
    <string name="create_group_hint_comment">Add a comment (optional)</string>
    <string name="create_group_btn_cancel">Cancel</string>
    <string name="create_group_btn_create">Create study group</string>

    <!-- Strings related to joining a new study group -->
    <string name="join_group_btn_join">Join study group</string>

    <!-- String related to help -->
    <string name="help_title">How to Study Group Manager</string>
    <string name="help_section_my">Here you will find all study groups you are participating in,
        ordered by event date in ascending order. Study groups with an event date in the past will
        be filtered out. Click on a study group the get more details and to leave it.</string>
    <string name="help_section_search">Here you will find all study groups you are not yet
    participating in, ordered by event creation date in descending order. You can alternatively
        order by event date in ascending order instead, by clicking on the sort icon (see icons)
        and choosing the corresponding option. You can filter the study group list by entering some
        keyword in the text field and clicking the apply button. To delete the filter click the
        clear button. Study groups with an event date in the past will be filtered out. Click on a
        study group to get more details and to join it.</string>
    <string name="help_section_profile">Here you can view your e-mail address which servers as user
        name. You can sign out of the app here.</string>
    <string name="help_icon_participants">current participants / max. participants of study group</string>
    <string name="help_icon_knowledge">average knowledge of study group participants, more
        lightbulbs reflect more knowledge (min=1, max=6)</string>
    <string name="help_icon_date">study group event date</string>
    <string name="help_icon_time">study group event time</string>
    <string name="help_icon_description">study group description</string>
    <string name="help_icon_location">study group location</string>
    <string name="help_icon_sort">sorting options for study group list (only available in toolbar
        of search section)</string>
    <string name="help_create">You can create a new study group from within any section by
        clicking on the green + button and filling out the corresponding form.</string>

    <!-- Strings related to editing the user profile -->
    <string name="profile_txt_user">User:</string>
    <string name="profile_txt_email">very.long.emailad@email.example.com</string>
    <string name="profile_txt_verified">verified</string>
    <string name="profile_txt_not_verified">NOT verified</string>
    <string name="profile_txt_please_verify">Please verify your email to use Study Group Manager.
        Sign out and sign in again after you have clicked on the verification link we sent you.
        You may have to check your Spam folder.</string>
    <string name="profile_btn_sign_out">Sign out</string>

    <!-- Strings related to card view -->
    <string name="card_txt_group_name">Group name</string>
    <string name="card_txt_show_details">Details</string>
    <string name="card_txt_participants">Participants</string>
    <string name="card_txt_date">Date</string>
    <string name="card_txt_time">Time</string>
    <string name="card_txt_location">Location</string>
    <string name="card_txt_location_details">Location details</string>
    <string name="card_btn_join">Join group</string>
    <string name="card_btn_leave">Leave group</string>
    <string name="card_txt_participants_details">Participant details</string>

</resources>
