<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_join"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:elevation="1dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/join_group_btn_join"
        app:titleTextColor="@color/colorWhite" />

    <android.support.v7.widget.CardView
        android:id="@+id/card_view_knowledge"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_join">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/image_knowledge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:tint="@color/colorPrimaryDark"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_lightbulb_outline_black_24dp" />

            <TextView
                android:id="@+id/label_knowledge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/create_group_txt_knowledge"
                app:layout_constraintStart_toEndOf="@+id/image_knowledge"
                app:layout_constraintTop_toTopOf="parent" />

            <SeekBar
                android:id="@+id/seek_bar_knowledge"
                android:layout_width="0dp"
                android:layout_height="14dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:max="6"
                android:progress="3"
                android:progressTint="@color/colorPrimaryDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/image_knowledge"
                app:layout_constraintTop_toBottomOf="@+id/label_knowledge" />

            <TextView
                android:id="@+id/label_knowledge_little"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/create_group_txt_knowledge_little"
                app:layout_constraintStart_toStartOf="@+id/seek_bar_knowledge"
                app:layout_constraintTop_toBottomOf="@+id/seek_bar_knowledge" />

            <TextView
                android:id="@+id/label_knowledge_good"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/create_group_txt_knowledge_good"
                app:layout_constraintEnd_toEndOf="@+id/seek_bar_knowledge"
                app:layout_constraintTop_toBottomOf="@+id/seek_bar_knowledge" />

            <ImageView
                android:id="@+id/image_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:tint="@color/colorPrimaryDark"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_knowledge_little"
                app:srcCompat="@drawable/ic_chat_black_24dp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_comment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/image_comment"
                app:layout_constraintTop_toBottomOf="@+id/label_knowledge_little">

                <EditText
                    android:id="@+id/edit_comment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/create_group_hint_comment"
                    android:inputType="textMultiLine"
                    android:maxLength="256"
                    android:maxLines="2" />
            </android.support.design.widget.TextInputLayout>
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/btn_cancel_join"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/create_group_btn_cancel"
        android:textColor="@color/colorWhite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_view_knowledge" />

    <Button
        android:id="@+id/btn_join"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/join_group_btn_join"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_view_knowledge" />

</android.support.constraint.ConstraintLayout>
